--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,25 +1,13 @@
-name: crDroid A15 - Hardcore Attempt
+name: crDroid A15 Full Build
 
 on:
   workflow_dispatch:
 
-permissions:
-  contents: read
-
 env:
   DEVICE: a15
   LUNCH: crdroid_a15-userdebug
-  MANIFEST_URL: https://github.com/crdroidandroid/android.git
-  MANIFEST_BRANCH: 14.0
-  LOCAL_MANIFEST_REPO: https://github.com/Llucs/android_local_manifests
-  # suas trees (copiadas direto para o treeplace depois)
-  DEVICE_REPO: https://github.com/Llucs/android_device_samsung_a15
-  KERNEL_REPO: https://github.com/Llucs/android_kernel_samsung_a15
-  VENDOR_REPO: https://github.com/Llucs/android_vendor_samsung_a15
-  OUT_DIR: out
   CCACHE_DIR: /tmp/ccache
-  # split size for artifacts (4.5 GB)
-  SPLIT_SIZE: 4500m
+  USE_CCACHE: 1
 
 jobs:
   build:
@@ -27,197 +15,91 @@ jobs:
     timeout-minutes: 360
 
     steps:
-      - name: Show runner disk & mem
+      - name: Free disk space (aggressive)
         run: |
-          echo "Runner info"
-          df -h
-          free -h
-          uname -a
-
-      - name: Free aggressive disk (best-effort)
-        run: |
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL || true
-          sudo docker system prune -af || true
-          sudo apt-get -y autoremove || true
+          sudo rm -rf /usr/share/dotnet \
+                      /usr/local/lib/android \
+                      /opt/ghc \
+                      /opt/hostedtoolcache
+          sudo docker system prune -af
           df -h
 
-      - name: Install essential packages (fast)
+      - name: Install dependencies
         run: |
-          sudo apt-get update -y
-          sudo apt-get install -y git-core curl repo zstd zip unzip \
-            build-essential bc bison flex openjdk-17-jdk python-is-python3 \
-            rsync ccache wget zlib1g-dev liblz4-tool
-          git --version; java -version; ccache --version
+          sudo apt update
+          sudo apt install -y \
+            git-core gnupg flex bison build-essential zip curl \
+            zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 \
+            lib32ncurses5-dev x11proto-core-dev libx11-dev \
+            lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc \
+            unzip fontconfig python-is-python3 openjdk-17-jdk
 
-      - name: Configure ccache
+      - name: Init repo
         run: |
-          mkdir -p $CCACHE_DIR
-          export CCACHE_DIR=$CCACHE_DIR
-          sudo ln -sf $CCACHE_DIR /ccache || true
-          # set a conservative limit (runner may not allow huge)
-          ccache -M 20G || true
-          echo "ccache dir: $CCACHE_DIR"
-          du -sh $CCACHE_DIR || true
-
-      - name: Prepare workspace & init repo (shallow + partial)
-        run: |
-          set -euo pipefail
-          mkdir -p crdroid
+          mkdir crdroid
           cd crdroid
-          repo init -u $MANIFEST_URL -b $MANIFEST_BRANCH --depth=1 --no-tags || true
+          repo init \
+            -u https://github.com/crdroidandroid/android.git \
+            -b 15.0 \
+            --depth=1 \
+            --no-tags
+
           mkdir -p .repo/local_manifests
-          # copy your local manifest (single-device manifest should be prepared there)
-          git clone --depth=1 $LOCAL_MANIFEST_REPO tmp_local_manifests || true
-          cp -r tmp_local_manifests/* .repo/local_manifests/ || true
-          # ensure we have place for device/kernel/vendor overrides - we'll clone them next
-          echo "Prepared local_manifests:"
-          ls -la .repo/local_manifests || true
+          curl -L https://raw.githubusercontent.com/Llucs/android_local_manifests/main/a15.xml \
+            -o .repo/local_manifests/a15.xml
 
-      - name: Repo sync (aggressive, partial-clone)
+      - name: Repo sync (conservative)
         run: |
-          set -euo pipefail
           cd crdroid
-          # partial clone + shallow to reduce download & objects
-          repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync --partial-clone -j$(nproc) || true
-          # quick clean to remove large unneeded prebuilts if present
-          sudo rm -rf prebuilts/clang/host || true
-          df -h
+          repo sync -c \
+            --no-clone-bundle \
+            --no-tags \
+            --optimized-fetch \
+            -j4
 
-      - name: Inject your device/kernel/vendor trees (shallow clones)
+      - name: Prepare build env
         run: |
-          set -euo pipefail
           cd crdroid
-          # replace or add device/kernel/vendor entries with your repos (shallow)
-          rm -rf device/samsung/$DEVICE || true
-          rm -rf kernel/samsung/$DEVICE || true
-          rm -rf vendor/samsung/$DEVICE || true
-          git clone --depth=1 $DEVICE_REPO device/samsung/$DEVICE || true
-          git clone --depth=1 $KERNEL_REPO kernel/samsung/$DEVICE || true
-          git clone --depth=1 $VENDOR_REPO vendor/samsung/$DEVICE || true
-          echo "Device tree:"
-          ls -la device/samsung/$DEVICE || true
-          df -h
-
-      - name: Pre-build cleanup (trim prebuilts, symbols, tests)
-        run: |
-          set -euo pipefail
-          cd crdroid
-          # remove docs, tests, large host prebuilts that are not strictly required
-          rm -rf .repo/projects/*/objects || true
-          rm -rf external/chromium* || true
-          rm -rf .repo/repo || true
-          # attempt to drop unneeded prebuilt toolchains if present (dangerous but saves space)
-          sudo rm -rf prebuilts/clang/host/linux-x86 || true
-          sudo rm -rf prebuilts/gcc/*/linux-x86 || true
-          df -h
-
-      - name: Setup build env & environment flags (aggressive)
-        run: |
-          set -euo pipefail
-          cd crdroid
-          export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64 || true
-          export PATH=$JAVA_HOME/bin:$PATH
-          source build/envsetup.sh || true
-          export USE_CCACHE=1
-          export CCACHE_DIR=${CCACHE_DIR}
-          export SKIP_ABI_CHECKS=true
-          export WITHOUT_CHECK_API=true
-          export WITHOUT_DRM=true
-          export TARGET_BUILD_VARIANT=userdebug
-          # reduce parallelism if runner is low-memory; nproc might be 2-4: be conservative
+          source build/envsetup.sh
+          lunch $LUNCH
           export JOBS=$(nproc)
-          if [ "$JOBS" -gt 4 ]; then JOBS=$((JOBS-1)); fi
-          echo "JOBS=$JOBS"
+          echo "Using $JOBS threads"
 
-      - name: Lunch target (prepare)
+      - name: Clean trash before build
         run: |
-          set -euo pipefail
           cd crdroid
-          # if your lunch name differs adjust; this is the assumed one:
-          lunch $LUNCH || true
-          # clear any previous out to make sure space accounting is clean
-          rm -rf out || true
+          rm -rf out/target/product/*/obj
           df -h
 
-      - name: Build target-files-package (safer than bacon)
+      - name: Build FULL ROM ZIP
         run: |
-          set -euo pipefail
           cd crdroid
-          echo "Starting target-files-package (this uses less intermediate storage than full bacon)"
-          # use mka (parallel make wrapper); conservative parallelism
-          mka target-files-package otatools -j$JOBS || true
-          df -h
+          source build/envsetup.sh
+          lunch $LUNCH
 
-      - name: Compress outputs & find ZIPs
+          # Flags pra reduzir lixo
+          export WITHOUT_CHECK_API=true
+          export BUILD_WITHOUT_OTA=true
+          export TARGET_BUILD_VARIANT=userdebug
+
+          mka bacon -j$(nproc)
+
+      - name: Verify output
         run: |
-          set -euo pipefail
-          cd crdroid
-          TARGET_OUT=out/target/product/$DEVICE
-          echo "Listing target out contents:"
-          ls -la $TARGET_OUT || true
-          # look for target_files or OTA intermediate (target_files*.zip)
-          find $TARGET_OUT -maxdepth 1 -type f -name "*target_files*.zip" -print > /tmp/tf_list || true
-          find $TARGET_OUT -maxdepth 1 -type f -name "*.zip" -print >> /tmp/tf_list || true
-          cat /tmp/tf_list || true
-          TFZ=$(head -n1 /tmp/tf_list || true)
-          if [ -z "$TFZ" ]; then
-            echo "No target_files or zip found - attempt to find any produced zip"
-            TFZ=$(ls $TARGET_OUT/*.zip 2>/dev/null | head -n1 || true)
-          fi
-          if [ -z "$TFZ" ]; then
-            echo "No zip found in $TARGET_OUT - will attempt to package target-files from out"
-            # try to build a target_files using build tools (best-effort)
-            # if this fails, the job will likely end here
-            TFZ=""
-          fi
-          echo "TFZ=$TFZ"
-          # if we have TFZ, copy to workspace root for splitting
-          mkdir -p $GITHUB_WORKSPACE/dist || true
-          if [ -n "$TFZ" ]; then
-            cp "$TFZ" $GITHUB_WORKSPACE/dist/ || true
-          else
-            # fallback: produce a raw zip from target dir (terrible but salvage)
-            cd $TARGET_OUT || true
-            zip -r9 $GITHUB_WORKSPACE/dist/${DEVICE}-raw-out.zip . || true
-          fi
-          ls -lah $GITHUB_WORKSPACE/dist || true
-          df -h
+          ls -lh crdroid/out/target/product/$DEVICE || true
+          test -f crdroid/out/target/product/$DEVICE/*.zip
 
-      - name: Split dist zips into artifact-friendly parts (4.5G)
-        run: |
-          set -euo pipefail
-          cd $GITHUB_WORKSPACE/dist
-          for F in *.zip; do
-            echo "Splitting $F ..."
-            split -b $SPLIT_SIZE "$F" "${F}.part-"
-          done
-          ls -lh || true
-
-      - name: Upload parts to GitHub Artifacts
+      - name: Upload ROM to GitHub Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: crdroid-a15-zip-parts
-          path: dist/
+          name: crDroid-A15-FULL
+          path: crdroid/out/target/product/a15/*.zip
           retention-days: 7
 
-      - name: (Optional) Upload full zip to GoFile as backup (best-effort)
-        if: always()
+      - name: Upload ROM to GoFile (mirror)
+        if: success()
         run: |
-          set -euo pipefail
-          cd $GITHUB_WORKSPACE/dist || true
-          # pick the biggest zip (might be raw-out)
-          ZIP=$(ls -S *.zip 2>/dev/null | head -n1 || true)
-          if [ -n "$ZIP" ]; then
-            echo "Uploading $ZIP to GoFile (backup) ..."
-            RESP=$(curl -s -F "file=@$ZIP" https://store1.gofile.io/uploadFile || true)
-            echo "GoFile response:"
-            echo "$RESP"
-          else
-            echo "No ZIP to upload to GoFile."
-          fi
-
-      - name: Final space & summary
-        run: |
-          echo "Final disk status"
-          df -h
-          echo "Build finished (maybe). Check artifacts for ZIP parts."
+          cd crdroid/out/target/product/a15
+          ZIP=$(ls *.zip | head -n1)
+          echo "Uploading $ZIP to GoFile"
+          curl -F "file=@$ZIP" https://store1.gofile.io/uploadFile
