Atualizar o build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,105 +1,191 @@
-name: crDroid A15 Full Build
+Name: crDroid A15 - SUICIDE RUN
 
 on:
   workflow_dispatch:
 
 env:
+  # Dados do dispositivo
   DEVICE: a15
   LUNCH: crdroid_a15-userdebug
-  CCACHE_DIR: /tmp/ccache
+  # Otimizações de compilação
   USE_CCACHE: 1
+  CCACHE_SIZE: 50G
+  CCACHE_DIR: /tmp/ccache
+  CCACHE_EXEC: /usr/bin/ccache
+  # Forçar Java correto para Android 15
+  JAVA_HOME: /usr/lib/jvm/java-17-openjdk-amd64
 
 jobs:
   build:
-    runs-on: ubuntu-24.04
-    timeout-minutes: 360
+    runs-on: ubuntu-22.04 # 22.04 é mais estável para hacks de partição que o 24.04
+    timeout-minutes: 360 # 6 horas é o limite máximo do GitHub hardcoded
 
     steps:
-      - name: Free disk space (aggressive)
+      # 1. O HACK DE ESPAÇO: Funde partições e remove softwares inúteis
+      - name: ☢️ Maximize Build Space (LVM Hack)
+        uses: easimon/maximize-build-space@master
+        with:
+          root-reserve-mb: 512
+          swap-size-mb: 12288 # 12GB Swap (Crucial para não dar erro de memória)
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
+          remove-docker-images: 'true'
+
+      # 2. Verificar se o hack funcionou
+      - name: 🔍 Check Disk & Memory
         run: |
-          sudo rm -rf /usr/share/dotnet \
-                      /usr/local/lib/android \
-                      /opt/ghc \
-                      /opt/hostedtoolcache
-          sudo docker system prune -af
+          echo "Disk Space:"
           df -h
+          echo "Memory & Swap:"
+          free -h
+          echo "CPU Cores:"
+          nproc
 
-      - name: Install dependencies
+      # 3. Instalar dependências essenciais (Sem lixo)
+      - name: 🛠️ Install Build Tools
         run: |
-          sudo apt update
-          sudo apt install -y \
-            git-core gnupg flex bison build-essential zip curl \
-            zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 \
-            lib32ncurses5-dev x11proto-core-dev libx11-dev \
-            lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc \
-            unzip fontconfig python-is-python3 openjdk-17-jdk
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            git-core gnupg flex bison build-essential zip curl zlib1g-dev \
+            gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev \
+            x11proto-core-dev libx11-dev lib32z1-dev libgl1-mesa-dev \
+            libxml2-utils xsltproc unzip fontconfig python3 python-is-python3 \
+            openjdk-17-jdk libncurses5 rsync ccache jq
 
-      - name: Init repo
+      # 4. Configurar Git e Repo
+      - name: ⚙️ Configure Git
+        run: |
+          git config --global user.name "LucasBot"
+          git config --global user.email "lucasbot@localhost"
+          git config --global color.ui false
+          # Otimização de rede
+          git config --global http.postBuffer 1048576000
+
+      # 5. Baixar ferramenta Repo
+      - name: 📥 Install Repo
+        run: |
+          mkdir -p ~/bin
+          curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
+          chmod a+x ~/bin/repo
+          echo "$HOME/bin" >> $GITHUB_PATH
+
+      # 6. Inicializar Repo (Android 15)
+      - name: 🌱 Repo Init
         run: |
           mkdir crdroid
           cd crdroid
-          repo init \
-            -u https://github.com/crdroidandroid/android.git \
-            -b 15.0 \
-            --depth=1 \
-            --no-tags
+          repo init -u https://github.com/crdroidandroid/android.git -b 15.0 --depth=1 --no-tags --groups=all,-notdefault,-device,-darwin,-x86,-mips
 
+      # 7. Injetar Manifesto Local
+      - name: 💉 Inject Local Manifest
+        run: |
+          cd crdroid
           mkdir -p .repo/local_manifests
-          curl -L https://raw.githubusercontent.com/Llucs/android_local_manifests/main/a15.xml \
-            -o .repo/local_manifests/a15.xml
+          # Baixa o manifesto direto. Se falhar, o build para aqui.
+          curl -L https://raw.githubusercontent.com/Llucs/android_local_manifests/main/a15.xml -o .repo/local_manifests/a15.xml
+          cat .repo/local_manifests/a15.xml
 
-      - name: Repo sync (conservative)
+      # 8. Repo Sync (Agressivo)
+      - name: 🔄 Repo Sync
         run: |
           cd crdroid
-          repo sync -c \
-            --no-clone-bundle \
-            --no-tags \
-            --optimized-fetch \
-            -j4
+          # -j$(nproc) usa todos os núcleos. --force-sync sobrescreve erros.
+          repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j$(nproc)
 
-      - name: Prepare build env
+      # 9. O GRANDE EXPURGO (Kamikaze)
+      # Deleta a pasta .repo (git history) para liberar ~40GB de espaço para o build.
+      # Deleta pastas de emuladores e arquiteturas inúteis.
+      - name: 🗑️ DELETE .REPO & Unused Sources
         run: |
           cd crdroid
-          source build/envsetup.sh
-          lunch $LUNCH
-          export JOBS=$(nproc)
-          echo "Using $JOBS threads"
-
-      - name: Clean trash before build
-        run: |
-          cd crdroid
-          rm -rf out/target/product/*/obj
+          echo "Tamanho antes do expurgo:"
+          du -sh .
+          
+          echo "Deletando histórico do Git (.repo)... Sem volta."
+          rm -rf .repo
+          
+          echo "Deletando fontes inúteis para economizar espaço..."
+          rm -rf device/generic/opengl-transport
+          rm -rf device/google/cuttlefish*
+          rm -rf device/google/trout*
+          rm -rf device/linaro
+          # Se o A15 for Mediatek/Exynos, podemos limpar coisas da Qualcomm (qcom) se não forem deps globais
+          # Mas é arriscado, então manteremos o básico.
+          
+          echo "Tamanho após expurgo:"
+          du -sh .
           df -h
 
-      - name: Build FULL ROM ZIP
+      # 10. Configurar CCACHE (Local, volátil)
+      - name: ⚡ Setup Ccache
+        run: |
+          export USE_CCACHE=1
+          export CCACHE_EXEC=/usr/bin/ccache
+          ccache -M 30G
+          ccache -o compression=true
+          ccache -z
+
+      # 11. O BUILD (Tudo ou Nada)
+      - name: 🚀 BUILD ROM
         run: |
           cd crdroid
           source build/envsetup.sh
-          lunch $LUNCH
-
-          # Flags pra reduzir lixo
+          
+          # Tenta configurar o lunch. Se falhar, tenta o nome genérico.
+          lunch $LUNCH || lunch crdroid_a15-ap2a-userdebug
+          
+          # Variáveis para evitar verificações lentas e erros de API
+          export KBUILD_BUILD_USER="Lucas"
+          export KBUILD_BUILD_HOST="Github-CI"
+          export BUILD_USERNAME="Lucas"
+          export BUILD_HOSTNAME="Github-CI"
           export WITHOUT_CHECK_API=true
-          export BUILD_WITHOUT_OTA=true
-          export TARGET_BUILD_VARIANT=userdebug
+          export BOARD_EXT4_SHARE_DUP_BLOCKS=true # Economiza espaço na imagem
+          export SKIP_ABI_CHECKS=true
+          
+          # Tenta compilar. Se der erro, continua para tentar pegar logs.
+          # Usamos 'mka bacon' como pedido, mas se falhar por espaço, nada feito.
+          mka bacon -j$(nproc) || true
 
-          mka bacon -j$(nproc)
-
-      - name: Verify output
+      # 12. Encontrar o arquivo (mesmo que o nome varie)
+      - name: 🕵️ Find Output
+        id: find_zip
         run: |
-          ls -lh crdroid/out/target/product/$DEVICE || true
-          test -f crdroid/out/target/product/$DEVICE/*.zip
+          cd crdroid/out/target/product/$DEVICE
+          echo "Conteúdo da pasta out:"
+          ls -lah
+          
+          # Pega qualquer ZIP que pareça uma ROM
+          ZIP_PATH=$(find . -maxdepth 1 -name "crDroid*.zip" | head -n 1)
+          
+          if [ -z "$ZIP_PATH" ]; then
+            echo "Nenhum ZIP encontrado. Build falhou."
+            exit 1
+          else
+            echo "ZIP encontrado: $ZIP_PATH"
+            echo "zip_path=$ZIP_PATH" >> $GITHUB_OUTPUT
+          fi
 
-      - name: Upload ROM to GitHub Artifacts
+      # 13. Upload para GoFile (Backup Imediato)
+      # Artifacts demoram para processar, GoFile é instantâneo.
+      - name: ☁️ Upload to GoFile
+        if: steps.find_zip.outputs.zip_path != ''
+        run: |
+          cd crdroid/out/target/product/$DEVICE
+          ZIP_NAME=$(basename ${{ steps.find_zip.outputs.zip_path }})
+          echo "Enviando $ZIP_NAME para GoFile..."
+          
+          # Tenta servidor aleatório do GoFile (API dinâmica)
+          SERVER=$(curl -s https://api.gofile.io/getServer | jq -r '.data.server')
+          curl -F "file=@$ZIP_NAME" "https://$SERVER.gofile.io/uploadFile"
+
+      # 14. Upload Artifacts (Se sobrar tempo/espaço)
+      - name: 📦 Upload Artifact
+        if: steps.find_zip.outputs.zip_path != ''
         uses: actions/upload-artifact@v4
         with:
-          name: crDroid-A15-FULL
-          path: crdroid/out/target/product/a15/*.zip
-          retention-days: 7
-
-      - name: Upload ROM to GoFile (mirror)
-        if: success()
-        run: |
-          cd crdroid/out/target/product/a15
-          ZIP=$(ls *.zip | head -n1)
-          echo "Uploading $ZIP to GoFile"
-          curl -F "file=@$ZIP" https://store1.gofile.io/uploadFile
+          name: crDroid-A15-Build
+          path: crdroid/out/target/product/${{ env.DEVICE }}/*.zip
+          retention-days: 3
